# fastapi-bookings-test

./: .env-sample  README.md  alembic.ini  pyproject.toml
app/: config.py  crud.py  db.py  main.py  models.py  schemas.py
app/api/: __init__.py  rooms.py  users.py
app/crud/: __init__.py  base.py  crud.py
migrations/: env.py
migrations/versions/: 6b62fcc0ac20_init.py  c63c0f50298e_booking.py  d3f09bd23066_init.py
tests/: conftest.py  main.py  test_crud.py
