[tool.poetry]
name = "fastapi-bookings-test"
version = "0.1.0"
description = ""
authors = ["Mitesh Ashar <email@miteshashar.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.1"
uvicorn = "^0.18.2"
postgres = "^4.0"
SQLAlchemy = "^1.4.40"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
